[gd_scene format=3 uid="uid://3vqeypmxh3su"]

[ext_resource type="Script" uid="uid://bkbae1cqciv3f" path="res://entities/player/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://j4rsvi25kv4a" path="res://entities/player/art/2d_animation_player-run.webp" id="2_tjdhl"]
[ext_resource type="PackedScene" uid="uid://cbib7o5ppjx1j" path="res://entities/player/in_game_ui.tscn" id="11_x08pd"]

[sub_resource type="Animation" id="Animation_dchgp"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_kdgjc"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.005555556, -0.16666667, 0, 0, 2, -0.005555556, -0.16666667, 0, 0, 3, -0.0055555566, -0.16666667, 0, 0, 4, -0.005555555, -0.16666667, 0, 0, 5, -0.005555555, -0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.099999994, 0.2, 0.3, 0.4, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q0i8f"]
_data = {
&"RESET": SubResource("Animation_dchgp"),
&"walk": SubResource("Animation_kdgjc")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_sglur"]

[node name="Player" type="CharacterBody2D" unique_id=553831703]
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=534086194]
texture_filter = 1
position = Vector2(-9.499998, -17.499992)
scale = Vector2(4.333333, 5.21875)
texture = ExtResource("2_tjdhl")
hframes = 6

[node name="Camera2D" type="Camera2D" parent="." unique_id=1629060643]
position = Vector2(-2, -234)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1262840572]
libraries/ = SubResource("AnimationLibrary_q0i8f")

[node name="Control" parent="." unique_id=530651095 instance=ExtResource("11_x08pd")]
offset_left = 698.0
offset_top = -646.0
offset_right = 738.0
offset_bottom = -606.0

[node name="PauseScreen" type="CanvasLayer" parent="." unique_id=574445189]
visible = false

[node name="ColorRect" type="ColorRect" parent="PauseScreen" unique_id=1799022706]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.23921569, 0.23921569, 0.23921569, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen/ColorRect" unique_id=120828890]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.5
offset_top = -134.5
offset_right = 147.5
offset_bottom = 134.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Resume" type="Button" parent="PauseScreen/ColorRect/VBoxContainer" unique_id=1727786200]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="MainMenu" type="Button" parent="PauseScreen/ColorRect/VBoxContainer" unique_id=1119432783]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="Quit" type="Button" parent="PauseScreen/ColorRect/VBoxContainer" unique_id=2103230310]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="ClickPlayer" type="AudioStreamPlayer" parent="PauseScreen" unique_id=1900594441]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=446107594]
position = Vector2(-13.999999, 2)
scale = Vector2(5.2624702, 6.5053864)
shape = SubResource("CircleShape2D_sglur")

[connection signal="pressed" from="PauseScreen/ColorRect/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseScreen/ColorRect/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PauseScreen/ColorRect/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
